Change Log

07/27/10
1. Added on/off option for Post Teaser Plugin.

07/22/10
1. Changed included image on privacy policy to a local image instead of external.
2. Added FAQ on why image suddenly stopped working before 3.2.
3. Edited wording on results page after running settings to clarify certain items better.

06/15/10
1. Corrected some function naming to avoid conflicts.
2. Added details on how the footer links work.
3. Changed plugin name back to original.
4. Added creation and try to set permissions on Google XML sitemap files.
5. Added option to turn on and off full error reporting.
6. Removed contact page pre-fill on the settings page.
7. Added notation on how to increase post teasers.

05/03/10
1. Updated Page Order to version 2.9.1
2. Added privacy policy creation
3. Added contact page creation with option for a google map
4. Added remote publishing options.
5. Added hook to footer for date, admin login, editing, privacy policy, and sitemap.
6. Wording edits for clarification.

01/27/10
1. Unchecked many options to get users to be more careful with settings.
2. Updated messages and information to help users understand the results better.
3. Changed layout and links.
4. Removed out-dated help page and added more links to the forum.
5. Logo change.

08/17/08
1. Made a correction to the DD Sitemap Generator.

08/14/09
1. Removed Canonical plugin since it's now included in All in One SEO plugin.
2. Better Blogroll/Links-extended was removed until it is updated by the original developers. The widget options no longer save to the database.
3. Updated Page Order plugin to version 2.8.3.
4. Updated Post Teaser to version 4.0.1.
5. Updated Sitemap Generator to version 3.17.
6. Fixed the permission errors that were being seen.


07/07/09
1. Update admin area to display properly in WP 2.8.

06/01/09
1. Added the H2 to H1 theme change back in.
2. Removed better blogroll temporarily until the issue of the links widget being removed and having to be readded is resolved.