@@ -1,5 +1,8 @@
 Change Log
 
+08/10/10
+1. Updated Page Order plugin to 3.0a.
+
 07/27/10
 1. Added on/off option for Post Teaser Plugin.
 
